Fixed misalignment in Chrome for sliders

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,13 @@
   font-family: sans-serif;
 }
 
+#custom-slider {
+  border: 2px solid green;
+  width: 100px;
+  height: 30px;
+  cursor: pointer;
+}
+
 #lorem {
   padding: 20px;
 }
@@ -52,6 +59,7 @@ input[type='range'] {
   -webkit-appearance: none;
   margin: 10px 0;
   width: 100%;
+  background: inherit;
 }
 
 input[type='range']:focus {
@@ -71,13 +79,13 @@ input[type='range']::-webkit-slider-runnable-track {
 input[type='range']::-webkit-slider-thumb {
   box-shadow: 1px 1px 1px #000000;
   border: 1px solid #000000;
-  height: 42px;
+  height: 30px;
   width: 15px;
   border-radius: 5px;
   background: #ffffff;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: -17px;
+  margin-top: -11px;
 }
 
 input[type='range']:focus::-webkit-slider-runnable-track {
@@ -97,7 +105,7 @@ input[type='range']::-moz-range-track {
 input[type='range']::-moz-range-thumb {
   box-shadow: 1px 1px 1px #000000;
   border: 1px solid #000000;
-  height: 42px;
+  height: 30px;
   width: 15px;
   border-radius: 5px;
   background: #ffffff;
@@ -131,7 +139,7 @@ input[type='range']::-ms-thumb {
   margin-top: 1px;
   box-shadow: 1px 1px 1px #000000;
   border: 1px solid #000000;
-  height: 42px;
+  height: 30px;
   width: 15px;
   border-radius: 5px;
   background: #ffffff;
